# grain-segmentation-cpp

./: README.md
main-project/: CMakeLists.txt
main-project/src/contact_points/contact_detection/: common.cpp  contact_detection_by_extending_labels.cpp  contact_detection_from_label_and_skeleton.cpp  contact_detection_from_label_naive.cpp
main-project/src/contact_points/utils/: dstyle.cpp  getCentroid.cpp  minTree.cpp  tiff2raw.cpp  tiff_binarization.cpp  tiff_binary_sum.cpp
main-project/src/graph/: grain.cpp  polyscope_compare_grains.cpp  polyscope_follow_grains_global.cpp  polyscope_follow_grains_with_labels.cpp  polyscope_tools.cpp
main-project/src/include/: ImageProcessingUtils.h  common.hpp  contact_detection_by_extending_labels.hpp  contact_detection_from_label_and_skeleton.hpp  contact_detection_from_label_naive.hpp  dstyle.h  dstyle.hpp  getCentroid.hpp  grain.h  minTree.hpp  polyscope_tools.h  tiff2raw.hpp  tiff_binarization.hpp  tiff_binary_sum.hpp
main-project/src/segmentation /maxTree/: maxTree.cpp
main-project/src/segmentation /minTree/: dstyle.cpp  minTree.cpp
main-project/src/segmentation /utils/: ImageProcessingUtils.cpp  colormap.cpp  getCentroid.cpp
